bookshop-demo/common/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /graphql
        backend:
          service:
            name: graphql
            port:
              number: 4000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
